# lux-s3

./: .gitignore  pyproject.toml
kits/starter/: agent.py  main.py
preprocess/: json_to_pandas.ipynb  json_to_parquet.ipynb
scraper/: README.md  get_meta.sh  scraper.ipynb
src/: setup.py
